update structure folder

--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,5 +1,5 @@
 # Images yang digunakan sebagai base image dengan os alpine
-FROM node:18-alpine as build
+FROM node:18-alpine
 
 # Set working directory di dalam container
 WORKDIR /app
@@ -9,16 +9,6 @@ COPY package*.json ./
 
 # Install dependencies
 RUN npm install
-
-
-# Copy semua file dari host ke working directory di dalam container
-FROM node:18-alpine as production
-
-# Set working directory di dalam container
-WORKDIR /app
-
-# Copy hanya node_modules dari tahap build
-COPY --from=build /app/node_modules ./node_modules
 
 # Copy semua file dari host ke working directory di dalam container
 COPY . .
